tests/baselines/reference/decoratorOnClassMethodThisParameter(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decoratorOnClassMethodThisParameter.ts(4,12): error TS1433: Neither decorators nor modifiers may be applied to 'this' parameters.
decoratorOnClassMethodThisParameter.ts(8,29): error TS1433: Neither decorators nor modifiers may be applied to 'this' parameters.
decoratorOnClassMethodThisParameter.ts(8,30): error TS2680: A 'this' parameter must be the first parameter.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decoratorOnClassMethodThisParameter.ts (3 errors) ====
    declare function dec(target: Object, propertyKey: string | symbol, parameterIndex: number): void;
    
    class C {
        method(@dec this: C) {}
               ~~~~
!!! error TS1433: Neither decorators nor modifiers may be applied to 'this' parameters.
    }
    
    class C2 {
        method(@dec allowed: C2, @dec this: C2) {}
                                ~~~~~
!!! error TS1433: Neither decorators nor modifiers may be applied to 'this' parameters.
                                 ~~~~~~~~~~~~~
!!! error TS2680: A 'this' parameter must be the first parameter.
    }